--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,11 @@ html {
 .button {
   color: green;
   background-color: black;
+  width: 120px;
 }
 
 .header {
+  grid-area: header;
   display: flex;
   justify-content: center;
 }
@@ -22,11 +24,17 @@ html {
 }
 
 .unorderedList {
-  padding-left: 5%;
+  padding-left: 0;
 }
 
 .bin {
   list-style-type: none;
+}
+
+.request {
+  list-style-type: none;
+  border: 2px solid green;
+  margin-bottom: 2px;
 }
 
 .requests {
@@ -36,6 +44,8 @@ html {
 .binSection {
   display: grid;
   grid-template-columns: 10% 90%;
+  grid-template-rows: auto auto;
   grid-template-areas:
+    "header header"
     "bins requests";
 }
